Changed default app logo, and font size of UI elements

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,7 +54,7 @@
             android:maxEms="300"
             android:maxLines="8"
             android:minHeight="48dp"
-            android:paddingStart="12sp"
+            android:paddingStart="12dp"
             android:textColorHint="@color/prompt_hint"
             tools:ignore="RtlSymmetry" />
 
