--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,20 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background_layout"
     tools:context=".MainActivity">
 
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@color/palette_lvl3"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/promptLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" >
+        app:layout_constraintVertical_bias="0.0">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvChatMessages"
@@ -29,12 +29,15 @@
         android:id="@+id/promptLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/palette_lvl4"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="15dp"
+        android:background="@drawable/prompt_layout"
         android:orientation="vertical"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
+        android:paddingStart="15dp"
         android:paddingTop="30dp"
-        android:paddingBottom="60dp"
+        android:paddingEnd="15dp"
+        android:paddingBottom="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,17 +47,17 @@
             android:id="@+id/promptInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="6dp"
+            android:layout_marginBottom="20dp"
             android:autofillHints=""
             android:background="@drawable/input_prompt"
             android:ems="30"
             android:hint="@string/promptInputHint"
-            android:textColor="@color/white"
             android:inputType="textMultiLine"
             android:maxEms="300"
             android:maxLines="8"
-            android:minHeight="48dp"
+            android:minHeight="54dp"
             android:paddingStart="12dp"
+            android:textColor="@color/white"
             android:textColorHint="@color/prompt_hint"
             tools:ignore="RtlSymmetry" />
 
@@ -62,10 +65,9 @@
             android:id="@+id/submitBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="12dp"
-            android:textSize="18sp"
             android:background="@drawable/submit_button"
             android:text="@string/submitBtnTxt"
+            android:textSize="18sp"
             app:backgroundTint="@null" />
 
     </LinearLayout>
