--- a/app/src/main/res/layout/message_item.xml
+++ b/app/src/main/res/layout/message_item.xml
@@ -23,10 +23,12 @@
         <TextView
             android:id="@+id/roleText"
             android:textAlignment="textStart"
+            android:gravity="start"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="5sp"
-            android:textSize="29sp"
+            android:layout_marginBottom="5sp"
+            android:textSize="22sp"
             android:textColor="@color/white"
             android:text="@string/roleTextPlaceholder" />
 
@@ -35,7 +37,8 @@
             android:textAlignment="textStart"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="17sp"
+            android:layout_marginBottom="6sp"
+            android:textSize="16sp"
             android:textColor="@color/white"
             android:text="@string/messageTextPlaceHolder" />
 
