--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvChatMessages"
+            android:layout_margin="15dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </LinearLayout>
