--- a/app/src/main/res/layout/message_item.xml
+++ b/app/src/main/res/layout/message_item.xml
@@ -39,6 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="6sp"
             android:textSize="16sp"
+            android:textIsSelectable="true"
             android:textColor="@color/white"
             android:text="@string/messageTextPlaceHolder" />
 
